--- a/index.html
+++ b/index.html
@@ -1,9 +1,36 @@
 <!DOCTYPE html>
   <html>
   <head>
-  	<title></title>
+     <link href="css/bootstrap.min.css" rel="stylesheet">
+     <link rel="stylesheet" type="text/css" href="style.css">
+     <meta charset="utf-8">
+     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
+  	<title>Ed Stream 1 Project Website</title>
   </head>
   <body>
+
+    <!-- Loader -->
+    <div id="loader-wrapper"></div>
+      <div id="loader"></div>
+      <div class="loader-section section-left"></div>
+      <div class="loader-section section-right"></div>
+    </div>
+    <!--End Loader-->
+
+
+
+
+    <div class="container">
+    	
+
+    </div>
   
+
+
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/bootstrap.min.js"></script>
   </body>
   </html>
