--- a/index.html
+++ b/index.html
@@ -12,12 +12,20 @@
 
 <body>
     <!-- Loader -->
-    <div id="loader-wrapper"></div>
-    <div id="loader"></div>
-    <div class="loader-section section-left"></div>
-    <div class="loader-section section-right"></div>
+    <div id="loader-wrapper">
+       <div id="loader">
+    	<span id="ball-1"></span>
+    	<span id="ball-2"></span>
+    	<span id="ball-3"></span>
+       </div>
+       <div class="loader-section section-left"></div>
+        <div class="loader-section section-right"></div>
+
+      
     </div>
+    
     <!--End Loader-->
+
     <!-- Header-->
     <header class="hidden-xs">
         <div class="container">
