Added Typewriter- need to align

--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
 
     <div class="jumbotron">
     	<div class="jumbotron-content">
+    	  <h1>
+              <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, Im Ed.", "I am Creative.", "I Love Design.", "I Love to Develop." ]'>
+          <span class="wrap"></span>
+  </a>
+</h1>
     		
     	</div>
     </div>
@@ -78,6 +83,7 @@
         </div>
         <div class="row">
         <div class="col-md-4 col-sm-8 col-xs-12">
+
         	
         </div>
         <div class="col-md-4 col-sm-8 col-xs-12">
