--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                 <div class="col-md-3 col-sm-3">
                     <div class="logo">
                         <a href="#">
-                            <img src="http://i64.tinypic.com/ndkcnt.png">
+                            <img class="light-logo hidden-xs" src="http://i64.tinypic.com/ndkcnt.png">
+                            <img class="dark-logo hidden-xs" src="http://i66.tinypic.com/2qnqmmx.png">
+
                         </a>
                     </div>
                 </div>
@@ -40,7 +42,7 @@
                     <div class="menu-links">
                         <nav>
                             <ul>
-                                <li><a href="#">Home</a></li>
+                                <li class="active"><a href="#">Home</a></li>
                                 <li><a href="#">About</a></li>
                                 <li><a href="#">Portfolio</a></li>
                                 <li><a href="#">Services</a></li>
