Changes to Portfolio Section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Catamaran:700|Dosis|Rubik:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
     <title>Ed Stream 1 Project Website</title>
 </head>
 
@@ -122,7 +123,7 @@
                         </div>
                         <div class="service-content">
                             <h3>Website Redesign</h3>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry</p>
+                            <p class="redesign">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry</p>
                             <a href="#">Read More</a>
                         </div>
                     </div>
@@ -169,37 +170,46 @@
             <div class="header-section">
                 <div class="row">
                     <div class="col-md-12 col-sm-12 col-xs-12">
-                        <h2>Recent Projects</h2>
+                        <h2>Websites we're proud to have built</h2>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-8 col-md-8 no-padding-1">
-                    <div class="portfolio-item">
-                        <img src="http://i65.tinypic.com/24dnhbq.jpg" class="project-1" />
-                        <div class="overlay">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 no-padding">
+                    <div class="rok-store">
+                        <img src="http://i66.tinypic.com/103heuv.jpg" class="image" />
+                        <div class="portfolio-overlay">
                             <p class="portfolio-title">Ring of Kerry Cycle Store</p>
-                            <a class="btn btn_medium btn1">See More</a>
+                            <a class="btn btn_medium btn1">View Website</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 no-padding">
-                    <div class="portfolio-images">
-                        <img src="http://i63.tinypic.com/2mh8s2t.png" />
-                        <div class="overlay-small">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 no-padding-1">
+                    <div class="primovisto">
+                        <img src="http://i65.tinypic.com/2na2ryo.jpg" class="image" />
+                        <div class="portfolio-overlay">
                             <p class="portfolio-title">Primovisto</p>
-                            <a class="btn btn_medium btn2">See More</a>
+                            <a class="btn btn_medium btn2">View Website</a>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-12 col-md-12 no-padding-2">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 no-padding-2">
+                    <div class="child-of-haiti">
+                        <img src="http://i67.tinypic.com/104raqv.jpg" class="image">
+                        <div class="portfolio-overlay">
+                            <p class="portfolio-title">Child of Haiti</p>
+                            <a class="btn btn_medium btn3">View Website</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 no-padding-3">
                     <div class="telecom-property">
-                        <img src="http://i67.tinypic.com/zwhst2.png" class="portfolio-large-image">
-                        <div class="overlay-large">
+                        <img src="http://i67.tinypic.com/25qbwuq.jpg" class="image">
+                        <div class="portfolio-overlay">
                             <p class="portfolio-title">Telecom Property</p>
-                            <a class="btn btn_medium btn3">See More</a>
+                            <a class="btn btn_medium btn3">View Website</a>
                         </div>
                     </div>
                 </div>
