Added other pages and completed contact-us page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Ed Stream 1 Project Website</title>
 </head>
 
-<body>
+<body id="homepage">
     <!-- Loader -->
     <div id="loader-wrapper">
         <div id="loader">
@@ -34,7 +34,7 @@
             <div class="row">
                 <div class="col-lg-2 col-md-3 col-sm-4">
                     <div class="logo">
-                        <a href="#">
+                        <a href="index.html">
                             <img class="light-logo hidden-xs" src="http://i67.tinypic.com/2568ql1.png" height="55px" width="120px">
                             <img class="dark-logo hidden-xs" src="http://i67.tinypic.com/2cfpqnk.png" height="55px" width="120px">
                         </a>
@@ -44,12 +44,12 @@
                     <div class="menu-links">
                         <nav>
                             <ul>
-                                <li class="active"><a href="#">Home</a></li>
-                                <li><a href="#">About</a></li>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="about_velabri.html">About</a></li>
                                 <li><a href="#">Portfolio</a></li>
                                 <li><a href="#">Services</a></li>
                                 <li><a href="#">Get a Quote</a></li>
-                                <li><a href="#">Contact</a></li>
+                                <li><a href="contact_velabri.html">Contact</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -85,7 +85,7 @@
                 <li><a href="#">Portfolio</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Get a Quote</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact_velabri.html">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -411,7 +411,7 @@
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                         <div class="footer-logo">
-                            <a href="#"><img src="http://i67.tinypic.com/2568ql1.png" height="55px" width="120px"></a>
+                            <a href="index.html"><img src="http://i67.tinypic.com/2568ql1.png" height="55px" width="120px"></a>
                         </div>
                         <div class="footer-nav">
                             <ul>
@@ -424,7 +424,7 @@
                                     </ul>
                                 </li>
                                 <li class="who-are-we"><a href="#">About</a></li>
-                                <li class="contact-us"><a href="#">Contact</a></li>
+                                <li class="contact-us"><a href="contact_velabri.html">Contact</a></li>
                             </ul>
                         </div>
                     </div>
