Work on About,Services, Portfolio and Quote Pages

--- a/about_velabri.html
+++ b/about_velabri.html
@@ -41,11 +41,11 @@
                     <div class="menu-links">
                         <nav>
                             <ul>
-                                <li class="active"><a href="#">Home</a></li>
-                                <li><a href="#">About</a></li>
-                                <li><a href="#">Portfolio</a></li>
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="about_velabri.html">About</a></li>
+                                <li><a href="velabri_portfolio.html">Portfolio</a></li>
                                 <li><a href="#">Services</a></li>
-                                <li><a href="#">Get a Quote</a></li>
+                                <li><a href="velabri_get_quote.html">Get a Quote</a></li>
                                 <li><a href="contact_velabri.html">Contact</a></li>
                             </ul>
                         </nav>
@@ -86,6 +86,90 @@
             </ul>
         </div>
     </nav>
+<!-- Jumbotron Section-->
+<div class="jumbotron-section">
+    <div class="jumbotron-content">
+        <h1>About Velabri</h1>
+        <p>Get to know us a little better.</p>
+    </div>
+</div>
+
+<div class="about-us">
+<div class="container">
+
+	
+	<div class="row">
+		<div class="col lg-7 col-md-7 col-sm-7 about-text">
+
+		<h5>Who Are We?</h5>
+
+		<p>Our Journey began in 2011 when we built our first online business Primovisto which is still in operation today. As time went on and through our work with Primovisto we became more and more interested in web design and development. </p>
+
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. </p>
+
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat.</p>
+		
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat.</p>
+			
+
+		</div>
+
+		<div class="col-lg-5 col-md-5 col-sm-5 about-image">
+
+		
+
+		<img src="http://i63.tinypic.com/25swv9z.jpg" height="532" width="340"/>
+		
+		
+
+		</div>
+	</div>
+  </div>
+	
+
+</div>
+
+
+<div class="meet-the-team">
+<div class="container">
+	<div class="row">
+	<div class="col-md-12 team-header">
+		<h2>Meet the Team</h2>
+
+	</div>
+		<div class="col-md-4 team-image">
+			<img class="img-responsive ed-team-image" src="http://i68.tinypic.com/28v8tb9.jpg">
+			<p class="name">Edward Stack</p>
+			<p class="position">Co-Founder/Web Designer/Developer</p>
+		</div>
+
+		<div class="col-md-4 team-image">
+			<img class="img-responsive james-team-image" src="http://i68.tinypic.com/2h52z3c.jpg" height="288px" width="288px">
+			<p class="name">James Stack</p>
+			<p class="position">Co-Founder</p>
+		</div>
+
+		<div class="col-md-4 team-image">
+		
+		</div>
+	</div>
+</div>
+
+
+</div>
+
+
+
 
 <footer>
         <div class="footer-section">
