--- a/contact_velabri.html
+++ b/contact_velabri.html
@@ -48,9 +48,9 @@
                             <ul>
                                 <li class="active"><a href="index.html">Home</a></li>
                                 <li><a href="about_velabri.html">About</a></li>
-                                <li><a href="#">Portfolio</a></li>
+                                <li><a href="velabri_portfolio.html">Portfolio</a></li>
                                 <li><a href="#">Services</a></li>
-                                <li><a href="#">Get a Quote</a></li>
+                                <li><a href="velabri_get_quote.html">Get a Quote</a></li>
                                 <li><a href="contact_velabri.html">Contact</a></li>
                             </ul>
                         </nav>
@@ -181,7 +181,9 @@
         </div>
     </div>
 
+
    <div id="map-canvas"></div>
+
     <script>
       function initMap() {
         var uluru = {lat: 52.414832, lng: -9.390184};
@@ -198,6 +200,9 @@
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBUqoRSLCX7sZjylVC51MXRHNq0Sv02FMc&callback=initMap">
     </script>
+
+
+    
     	
 
 
