--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                             <ul>
                                 <li><a href="#">Home</a></li>
                                 <li><a href="about_velabri.html">About</a></li>
-                                <li><a href="#">Portfolio</a></li>
-                                <li><a href="#">Services</a></li>
-                                <li><a href="#">Get a Quote</a></li>
+                                <li><a href="velabri_portfolio.html">Portfolio</a></li>
+                                <li><a href="velabri_services.html">Services</a></li>
+                                <li><a href="velabri_get_quote.html">Get a Quote</a></li>
                                 <li><a href="contact_velabri.html">Contact</a></li>
                             </ul>
                         </nav>
@@ -280,9 +280,9 @@
         <div class="container">
             <div class="header_section">
                 <div class="row">
-                    <div class="col-lg-12">
+                    <div class="col-lg-12 col-md-12 col-sm-12">
                         <h2>Our Skills</h2>
-                        <p>Over the years we have gained vast knowledge in the following frontend technologies:</p>
+                        <h3>Over the years we have gained vast knowledge in the following frontend technologies:</h3>
                     </div>
                 </div>
             </div>
