Added Wireframes for Homepage + Changes to Jumbotron

--- a/about_velabri.html
+++ b/about_velabri.html
@@ -103,23 +103,13 @@
 
 		<h5>Who Are We?</h5>
 
-		<p>Our Journey began in 2011 when we built our first online business Primovisto which is still in operation today. As time went on and through our work with Primovisto we became more and more interested in web design and development. </p>
+		<p>Our Journey began in 2011 when we built our first online business Primovisto which is still in operation today. Through our work with Primovisto we became more and more involved in web design and development and that involvement lead to us setting up Velabri in 2013.</p>
 
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. </p>
+		<p>Over the past 4 years we have honed our craft and improved our skills in a number of web based languages such as HTML, CSS, Javascript and Python. </p>
 
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat.</p>
+		<p>Also through our work with Primovsto we have gained valuable experiencee and a genuine understanding of what of what it takes to make your business flourish online. A well designed and structured website will offer your business credibility and help you tostand out from the crowd.</p>
 		
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat.</p>
+		<p>Combining that solid base with a strong brand image and digital marketing campaign are keys to a successful online business. Velabri are here to achieve their goals. We'll listen closely to your thoughts and needs and will structure a plan accordingly. For us the customer always comes first and their satisfaction is vital to our business and theirs alike.</p>
 			
 
 		</div>
