--- a/velabri_services.html
+++ b/velabri_services.html
@@ -45,10 +45,10 @@
                         <div class="menu-links">
                             <nav>
                                 <ul>
-                                    <li class="active"><a href="index.html">Home</a></li>
+                                    <li><a href="index.html">Home</a></li>
                                     <li><a href="about_velabri.html">About</a></li>
                                     <li><a href="velabri_portfolio.html">Portfolio</a></li>
-                                    <li><a href="#">Services</a></li>
+                                    <li><a href="velabri_services.html">Services</a></li>
                                     <li><a href="velabri_get_quote.html">Get a Quote</a></li>
                                     <li><a href="contact_velabri.html">Contact</a></li>
                                 </ul>
