--- a/velabri_portfolio.html
+++ b/velabri_portfolio.html
@@ -48,7 +48,7 @@
                                     <li class="active"><a href="index.html">Home</a></li>
                                     <li><a href="about_velabri.html">About</a></li>
                                     <li><a href="velabri_portfolio.html">Portfolio</a></li>
-                                    <li><a href="#">Services</a></li>
+                                    <li><a href="velabri_services.html">Services</a></li>
                                     <li><a href="velabri_get_quote.html">Get a Quote</a></li>
                                     <li><a href="contact_velabri.html">Contact</a></li>
                                 </ul>
