Testimonial secion of about-us page and more

--- a/velabri_portfolio.html
+++ b/velabri_portfolio.html
@@ -98,7 +98,7 @@
         <div class="portfolio-welcome">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 portfolio-page-header">
                         <h2>Welcome to Velabri's Portfolio</h2>
                         <p>Check out some of the cool projects we've completed. We're proud to have been involved in helping to build these businesses!</p>
                     </div>
@@ -190,7 +190,7 @@
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                     <div class="portfolio-item">
                         <div class="logo-image">
-                            <img src="http://i64.tinypic.com/2m3qt0g.png" alt="Telecom Property" class="img-responsive">
+                            <img src="http://i66.tinypic.com/21wlza.png" alt="Telecom Property" class="img-responsive">
                             <div class="overlay">
                                 <div class="icons">
                                     <a href="www.telecomproperty.com"><i class="fa fa-eye"></i></a>
@@ -206,7 +206,7 @@
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                     <div class="portfolio-item">
                         <div class="logo-image">
-                            <img src="http://i63.tinypic.com/157d72b.png" alt="Sollarte" class="img-responsive">
+                            <img src="http://i63.tinypic.com/acpge0.png" alt="Sollarte" class="img-responsive">
                             <div class="overlay">
                                 <div class="icons">
                                     <a href="www.sollarte.com"><i class="fa fa-eye"></i></a>
@@ -222,7 +222,7 @@
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                     <div class="portfolio-item">
                         <div class="logo-image">
-                            <img src="http://i63.tinypic.com/fdd4ow.png" alt="Golfites" class="img-responsive">
+                            <img src="http://i65.tinypic.com/poduu.png" alt="Golfites" class="img-responsive">
                             <div class="overlay">
                                 <div class="icons">
                                     <a href="www.golfites.com"><i class="fa fa-eye"></i></a>
