--- a/velabri_services.html
+++ b/velabri_services.html
@@ -341,33 +341,47 @@
         </div>
     </div>
 
-    <footer>
-        <div class="footer-section">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                        <div class="footer-logo">
-                            <a href="#"><img src="http://i67.tinypic.com/2568ql1.png" height="55px" width="120px"></a>
-                        </div>
-                        <div class="footer-nav">
-                            <ul>
-                                <li class="our-services"><a href="#">Services</a></li>
-                                <li class="our-portfolio"><a href="#">Portfolio</a></li>
-                                <li class="social-nav">
-                                    <ul>
-                                        <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                                        <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                                    </ul>
-                                </li>
-                                <li class="who-are-we"><a href="#">About</a></li>
-                                <li class="contact-us"><a href="#">Contact</a></li>
-                            </ul>
-                        </div>
-                    </div>
+    <footer class="footer">
+            <div class="footer-left col-md-4 col-sm-6">
+                <p class="about">
+                    <span> About Velabri.</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                </p>
+                <div class="icons">
+                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                    <a href="#"><i class="fa fa-google-plus"></i></a>
+                    <a href="#"><i class="fa fa-github"></i></a>
                 </div>
             </div>
-        </div>
-    </footer>
+            <div class="footer-center col-md-4 col-sm-6">
+                <p class="center-header">Contact Velabri.</p>
+                <div>
+                    <i class="fa fa-map-marker"></i>
+                    <p> Listowel, Co.Kerry, Ireland</p>
+                </div>
+                <div>
+                    <i class="fa fa-phone"></i>
+                    <p> (+353) 86-8875747</p>
+                </div>
+                <div>
+                    <i class="fa fa-envelope"></i>
+                    <p><a href="#"> info@velabri.co</a></p>
+                </div>
+            </div>
+            <div class="footer-right col-md-4 col-sm-6">
+                <p class="right-header">Useful Links.</p>
+                <p class="menu">
+                    <a href="#"> Home</a> |
+                    <a href="#"> About</a> |
+                    <a href="#"> Portfolio</a> |
+                    <a href="#"> Services</a> |
+                    <a href="#"> Get a Quote</a> |
+                    <a href="#"> Contact</a>
+                </p>
+                <p class="name"> Velabri Ltd. 2017</p>
+            </div>
+        </footer>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="js/script.js"></script>
