Changes to Get a Quote Page and Homepage Jumbotron

--- a/about_velabri.html
+++ b/about_velabri.html
@@ -164,7 +164,7 @@
                         <p class="testimonial-title">CEO - Ring of Kerry Cycle Store</p>
                     </div>
                 </div>
-                <div class="row extra-margin">
+                <div class="row extra-padding">
                     <div class="col-md-1 col-sm-1 col-xs-3 testimonial-image">
                         <img src="http://i65.tinypic.com/2na2ryo.jpg" width="80px" height="80px">
                     </div>
