--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 <div class="col-lg-2 col-md-3 col-sm-4">
                     <div class="logo">
                         <a href="index.html">
-                            <img class="light-logo hidden-xs" src="http://i67.tinypic.com/2568ql1.png" height="55px" width="120px">
-                            <img class="dark-logo hidden-xs" src="http://i67.tinypic.com/2cfpqnk.png" height="55px" width="120px">
+                            <img class="light-logo hidden-xs" src="http://i67.tinypic.com/2568ql1.png" height="52px" width="170px">
+                            <img class="dark-logo hidden-xs" src="http://i67.tinypic.com/2cfpqnk.png" height="52px" width="170px">
                         </a>
                     </div>
                 </div>
@@ -94,8 +94,8 @@
     <!-- jumbotron-section -->
     <div class="jumbotron-section">
         <div class="jumbotron-content">
-            <h1>Welcome to <span>Velabri Ltd.</span></h1>
-            <p>Experts in Web Design and Development.</p>
+            <h1>Experts in <span>Web Design</span> and <span>Development</span></h1>
+            <p>Building Beautiful, Responsive Websites that Sell.</p>
             <ul>
                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -130,7 +130,9 @@
 
     <div class="services">
         <div class="container">
-            <div class="row">
+
+
+            <div class="row ">
                 <div class="col-md-4 col-sm-4 col-xs-12">
                     <div class="service">
                         <div class="service-icon">
