--- a/velabri_portfolio.html
+++ b/velabri_portfolio.html
@@ -105,139 +105,143 @@
                 </div>
             </div>
         </div>
+        
         <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                    <div class="portfolio-item">
-                        <div class="logo-image">
-                            <img src="http://i64.tinypic.com/300b6yv.png" alt="Primovisto" class="img-responsive">
-                            <div class="overlay">
-                                <div class="icons">
-                                    <a href="www.primovisto.com"><i class="fa fa-eye"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="portfolio-item-info">
-                            <div class="name">Primovisto.</div>
-                            <div class="type">eCommerce Website</div>
+        <div class="portfolio-main">
+    <div class="row">
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+            <div class="portfolio-item">
+                <div class="logo-image">
+                    <img src="http://i64.tinypic.com/300b6yv.png" alt="Primovisto" class="img-responsive">
+                    <div class="overlay">
+                        <div class="icons">
+                            <a href="www.primovisto.com"><i class="fa fa-eye"></i></a>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                    <div class="portfolio-item">
-                        <div class="logo-image">
-                            <img src="http://i64.tinypic.com/k2xqua.png" alt="Child of Haiti" class="img-responsive">
-                            <div class="overlay">
-                                <div class="icons">
-                                    <a href="www.childofhaiti.ie"><i class="fa fa-eye"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="portfolio-item-info">
-                            <div class="name">Child of Haiti.</div>
-                            <div class="type">Charity Website</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                    <div class="portfolio-item">
-                        <div class="logo-image">
-                            <img src="http://i63.tinypic.com/idcg1i.png" alt="Bamboozine" class="img-responsive">
-                            <div class="overlay">
-                                <div class="icons">
-                                    <a href="www.bamboozine.com"><i class="fa fa-eye"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="portfolio-item-info">
-                            <div class="name">Bamboozine.</div>
-                            <div class="type">eCommerce Website</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                    <div class="portfolio-item">
-                        <div class="logo-image">
-                            <img src="http://i66.tinypic.com/6xzvrp.png" alt="Vicuna HQ" class="img-responsive">
-                            <div class="overlay">
-                                <div class="icons">
-                                    <a href="www.vicunahq.com"><i class="fa fa-eye"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="portfolio-item-info">
-                            <div class="name">Vicuna.</div>
-                            <div class="type">Website Design</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                    <div class="portfolio-item">
-                        <div class="logo-image">
-                            <img src="http://i63.tinypic.com/2jcinmf.png" alt="Ring of Kerry Cycle Store" class="img-responsive">
-                            <div class="overlay">
-                                <div class="icons">
-                                    <a href="www.rokcycleshop.com"><i class="fa fa-eye"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="portfolio-item-info">
-                            <div class="name">Ring of Kerry Cycle Store.</div>
-                            <div class="type">eCommerce Website</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                    <div class="portfolio-item">
-                        <div class="logo-image">
-                            <img src="http://i66.tinypic.com/21wlza.png" alt="Telecom Property" class="img-responsive">
-                            <div class="overlay">
-                                <div class="icons">
-                                    <a href="www.telecomproperty.com"><i class="fa fa-eye"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="portfolio-item-info">
-                            <div class="name">Telecom Property.</div>
-                            <div class="type">Website Design</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                    <div class="portfolio-item">
-                        <div class="logo-image">
-                            <img src="http://i63.tinypic.com/acpge0.png" alt="Sollarte" class="img-responsive">
-                            <div class="overlay">
-                                <div class="icons">
-                                    <a href="www.sollarte.com"><i class="fa fa-eye"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="portfolio-item-info">
-                            <div class="name">Sollarte.</div>
-                            <div class="type">eCommerce Website</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                    <div class="portfolio-item">
-                        <div class="logo-image">
-                            <img src="http://i65.tinypic.com/poduu.png" alt="Golfites" class="img-responsive">
-                            <div class="overlay">
-                                <div class="icons">
-                                    <a href="www.golfites.com"><i class="fa fa-eye"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="portfolio-item-info">
-                            <div class="name">Golfites.</div>
-                            <div class="type">Blog</div>
-                        </div>
-                    </div>
+                <div class="portfolio-item-info">
+                    <div class="name">Primovisto.</div>
+                    <div class="type">eCommerce Website</div>
                 </div>
             </div>
         </div>
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+            <div class="portfolio-item">
+                <div class="logo-image">
+                    <img src="http://i64.tinypic.com/k2xqua.png" alt="Child of Haiti" class="img-responsive">
+                    <div class="overlay">
+                        <div class="icons">
+                            <a href="www.childofhaiti.ie"><i class="fa fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item-info">
+                    <div class="name">Child of Haiti.</div>
+                    <div class="type">Charity Website</div>
+                </div>
+            </div>
         </div>
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+            <div class="portfolio-item">
+                <div class="logo-image">
+                    <img src="http://i63.tinypic.com/idcg1i.png" alt="Bamboozine" class="img-responsive">
+                    <div class="overlay">
+                        <div class="icons">
+                            <a href="www.bamboozine.com"><i class="fa fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item-info">
+                    <div class="name">Bamboozine.</div>
+                    <div class="type">eCommerce Website</div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+            <div class="portfolio-item">
+                <div class="logo-image">
+                    <img src="http://i66.tinypic.com/6xzvrp.png" alt="Vicuna HQ" class="img-responsive">
+                    <div class="overlay">
+                        <div class="icons">
+                            <a href="www.vicunahq.com"><i class="fa fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item-info">
+                    <div class="name">Vicuna.</div>
+                    <div class="type">Website Design</div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+            <div class="portfolio-item">
+                <div class="logo-image">
+                    <img src="http://i63.tinypic.com/2jcinmf.png" alt="Ring of Kerry Cycle Store" class="img-responsive">
+                    <div class="overlay">
+                        <div class="icons">
+                            <a href="www.rokcycleshop.com"><i class="fa fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item-info">
+                    <div class="name">Ring of Kerry Cycle Store.</div>
+                    <div class="type">eCommerce Website</div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+            <div class="portfolio-item">
+                <div class="logo-image">
+                    <img src="http://i66.tinypic.com/21wlza.png" alt="Telecom Property" class="img-responsive">
+                    <div class="overlay">
+                        <div class="icons">
+                            <a href="www.telecomproperty.com"><i class="fa fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item-info">
+                    <div class="name">Telecom Property.</div>
+                    <div class="type">Website Design</div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+            <div class="portfolio-item">
+                <div class="logo-image">
+                    <img src="http://i63.tinypic.com/acpge0.png" alt="Sollarte" class="img-responsive">
+                    <div class="overlay">
+                        <div class="icons">
+                            <a href="www.sollarte.com"><i class="fa fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item-info">
+                    <div class="name">Sollarte.</div>
+                    <div class="type">eCommerce Website</div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+            <div class="portfolio-item">
+                <div class="logo-image">
+                    <img src="http://i65.tinypic.com/poduu.png" alt="Golfites" class="img-responsive">
+                    <div class="overlay">
+                        <div class="icons">
+                            <a href="www.golfites.com"><i class="fa fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item-info">
+                    <div class="name">Golfites.</div>
+                    <div class="type">Blog</div>
+                </div>
+            </div>
+        </div>
+    </div>
+ </div>
+</div>
+
+        
         <footer class="footer">
   <div class="footer-left col-md-4 col-sm-6">
     <p class="about">
