--- a/contact_velabri.html
+++ b/contact_velabri.html
@@ -95,6 +95,19 @@
     <!-- End Responsive Header -->
     <!-- End Header -->
 <div class="contact-us-page">
+ <div class="contact-header">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-12 col-lg-12">
+                <h2 class="contact-heading">Get In Touch</h2>
+                
+                <p class="contact-paragraph">
+Looking to get your company online? Want to bring your business to the next level with an online store? Or just have a great idea that you need to tell the world about?! Get in touch with us and let us help you make that happen! </p>
+            </div>
+        </div>
+    </div>
+ </div>
+ <div class="contact-us-main">
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-sm-6 col-xs-12 contact-form">
@@ -164,6 +177,7 @@
             </div>
         </div>
     </div>
+</div>
 </div>
 
 
