Work on services page and color changes

--- a/contact_velabri.html
+++ b/contact_velabri.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.css">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Monoton" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Open+Sans+Condensed:300|Roboto:900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Open+Sans+Condensed:300" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:900" rel="stylesheet">
 	<title>Velabri Contact Us Page</title>
 
 </head>
@@ -94,6 +94,13 @@
     
     <!-- End Responsive Header -->
     <!-- End Header -->
+
+    <div class="jumbotron-section">
+        <div class="jumbotron-content">
+            <p>About Velabri</p>
+            <p>Get to know us a little better.</p>
+        </div>
+    </div>
 <div class="contact-us-page">
  <div class="contact-header">
     <div class="container">
