--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Monoton" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Open+Sans+Condensed:300|Roboto:900" rel="stylesheet">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <title>Ed Stream 1 Project Website</title>
+    <script>
+        
+        $(document).ready(function){
+
+        });
+    </script>
 </head>
 
 <body id="homepage">
