--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 <div class="services-btn">
                 <div class="row">
                     <div class="col-xs-12">
-                        <a href="#" class="btn_1">View All Services</a>
+                        <a href="velabri_services.html" class="btn_1">View All Services<i class="fa fa-arrow-right" style="margin-left:10px; font-size:20px;"></i></a>
                     </div>
                 </div>
             </div>
@@ -265,7 +265,7 @@
                 <div class="col-md-4 hidden-xs hidden-sm text-center">
                     <div class="why-choose-image">
                         <div class="why-choose-image">
-                            <a href="#"><img src="http://i66.tinypic.com/r2jlts.png" height="460px" width="290px" style="margin-top:40px;"/></a>
+                            <a href="#"><img src="http://i64.tinypic.com/2utt8gw.png" height="460px" width="290px" style="margin-top:40px;"/></a>
                         </div>
                     </div>
                 </div>
