color scheme changes to homepage 'get a quote' section

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
        <div class="services-header">
         
                 <h2 class="services-heading">Our Services</h2>
-                <hr style="width:10%; border-top:5px solid ; color:#3a3a3a;">
+                <hr style="width:10%; border-top:5px solid #32c4e9;">
                 
                 <p class="services-paragraph">Take a look at some of the web services that we are proud to provide. If you have a specific project in mind and think one of our services can help you, get in touch with us and we'll make your vision come to life! </p>
        </div>
@@ -265,7 +265,7 @@
                 <div class="col-md-4 hidden-xs hidden-sm text-center">
                     <div class="why-choose-image">
                         <div class="why-choose-image">
-                            <a href="#"><img src="http://i64.tinypic.com/2utt8gw.png" height="460px" width="290px" style="margin-top:40px;"/></a>
+                            <a href="#"><img src="http://i64.tinypic.com/2utt8gw.png" height="350px" width="190px" style="margin-top:40px;"/></a>
                         </div>
                     </div>
                 </div>
