--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
        <div class="services-header">
         
                 <h2 class="services-heading">Our Services</h2>
-                <hr style="width:10%; border-top:5px solid #32c4e9;">
+                <hr style="width:10%; border-top:5px solid #232929;">
                 
                 <p class="services-paragraph">Take a look at some of the web services that we are proud to provide. If you have a specific project in mind and think one of our services can help you, get in touch with us and we'll make your vision come to life! </p>
        </div>
@@ -226,7 +226,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <h2 class="choose-us-main-header">Why Choose Velabri?</h2>
-                     <hr style="width:10%; border-top:5px solid #fff;">
+                     <hr style="width:10%; border-top:5px solid #32c4e9;">
                     <p class="choose-us-header-text">We'd like to think there are numerous reasons to choose Velabri for your Web Project - Below are just some of those! </p>
                 </div>
             </div>
@@ -265,7 +265,7 @@
                 <div class="col-md-4 hidden-xs hidden-sm text-center">
                     <div class="why-choose-image">
                         <div class="why-choose-image">
-                            <a href="#"><img src="http://i64.tinypic.com/2utt8gw.png" height="350px" width="190px" style="margin-top:40px;"/></a>
+                            <a href="#"><img src="http://i64.tinypic.com/2utt8gw.png" height="400px" width="250px" style="margin-top:80px;"/></a>
                         </div>
                     </div>
                 </div>
@@ -324,6 +324,7 @@
                 <div class="row">
                     <div class="col-md-12 col-sm-12 col-xs-12">
                         <h2>Recent Projects</h2>
+                        <hr style="width:10%; border-top:5px solid #232929;">
                         <p class="portfolio-heading-text">We're proud to have built the following websites:</p>
                     </div>
                 </div>
@@ -416,6 +417,7 @@
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12">
                         <h2>Our Skills</h2>
+                        <hr style="width:10%; border-top:5px solid #32c4e9;">
                         <h3>Over the years we have gained vast knowledge in the following frontend technologies:</h3>
 
                     </div>
