--- a/about_velabri.html
+++ b/about_velabri.html
@@ -62,16 +62,16 @@
             <div class="row">
                 <div class="col-xs-12">
                     <div class="mobile-logo">
-                        <a href="#"><img src="http://i66.tinypic.com/2qnqmmx.png" alt=""></a>
+                        <a href="#"><img src="http://i64.tinypic.com/kapfuf.png" alt="Velabri Web Design" height="80px" width="240px"></a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <nav class="navbar navbar-inverse visible-xs">
-        <div class="container">
+        <div class="container ">
             <div class="nav navbar-header">
-                <a class="navbar-brand" href="#">Menu</a>
+                <a class="navbar-brand" href="#" style="color:#32c4e9">Menu</a>
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myCollapsingList">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -79,12 +79,12 @@
                 </button>
             </div>
             <ul id="myCollapsingList" class="nav navbar-nav navbar-right collapse navbar-collapse">
-                <li class="app-nav__list-item"><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Get a Quote</a></li>
-                <li><a href="#">Contact</a></li>
+                <li class="app-nav__list-item"><a href="index.html">Home</a></li>
+                <li><a href="about_velabri.html">About</a></li>
+                <li><a href="velabri_portfolio.html">Portfolio</a></li>
+                <li><a href="velabri_services.html">Services</a></li>
+                <li><a href="velabri_get_quote.html">Get a Quote</a></li>
+                <li><a href="contact_velabri.html">Contact</a></li>
             </ul>
         </div>
     </nav>
