--- a/velabri_services.html
+++ b/velabri_services.html
@@ -132,41 +132,38 @@
         </header>
         <!-- Responsive Header -->
         <div class="mobile-logo-section visible-xs">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xs-12">
-                        <div class="mobile-logo">
-                            <a href="#"><img src="http://i66.tinypic.com/2qnqmmx.png" alt=""></a>
-                        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="mobile-logo">
+                        <a href="#"><img src="http://i64.tinypic.com/kapfuf.png" alt="Velabri Web Design" height="80px" width="240px"></a>
                     </div>
                 </div>
             </div>
         </div>
-        <nav class="navbar navbar-inverse visible-xs">
-            <div class="container">
-                <div class="nav navbar-header">
-                    <a class="navbar-brand" href="#">Menu</a>
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myCollapsingList">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                </div>
-                <ul id="myCollapsingList" class="nav navbar-nav navbar-right collapse navbar-collapse">
-                    <li class="app-nav__list-item"><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Get a Quote</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
+    </div>
+    <nav class="navbar navbar-inverse visible-xs">
+        <div class="container ">
+            <div class="nav navbar-header">
+                <a class="navbar-brand" href="#" style="color:#32c4e9">Menu</a>
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myCollapsingList">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
             </div>
-        </nav>
+            <ul id="myCollapsingList" class="nav navbar-nav navbar-right collapse navbar-collapse">
+                <li class="app-nav__list-item"><a href="index.html">Home</a></li>
+                <li><a href="about_velabri.html">About</a></li>
+                <li><a href="velabri_portfolio.html">Portfolio</a></li>
+                <li><a href="velabri_services.html">Services</a></li>
+                <li><a href="velabri_get_quote.html">Get a Quote</a></li>
+                <li><a href="contact_velabri.html">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
         <div class="jumbotron-section">
-            <div class="jumbotron-content">
-                <h1>Our Services</h1>
-
-            </div>
+            
         </div>
 
 
@@ -175,6 +172,7 @@
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12">
                 <h2 class="services-heading">What We Do</h2>
+                <hr style="width:10%; border-top:5px solid #232929;">
                 
                 <p class="services-paragraph">Below is a list of the web services that Velabri offer. If you have any questions about any of our services don't hesitate to <a href="contact_velabri.html">contact us!</a></p>
             </div>
