--- a/index.html
+++ b/index.html
@@ -275,7 +275,9 @@
             </div>
         </div>
     </div>
-    <!-- Get a Quote-->
+    
+
+    <!-- Get a Quote Section-->
     <div class="work-with-us">
         <div class="container">
             <div class="row">
@@ -309,7 +311,7 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 no-padding">
                         <div class="portfolio-image">
-                            <a href="www.rokcycleshop.com"><img src="http://i66.tinypic.com/103heuv.jpg" class="image">
+                            <a href="www.rokcycleshop.com"><img src="http://i66.tinypic.com/103heuv.jpg" class="image img-responsive">
                             </a>
                         </div>
                         <p class="portfolio-website">www.rokcycleshop.com</p>
@@ -317,7 +319,7 @@
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 no-padding-1">
                         <div class="portfolio-image">
-                            <a href="www.primovisto.com"><img src="http://i65.tinypic.com/2na2ryo.jpg" class="image">
+                            <a href="www.primovisto.com"><img src="http://i65.tinypic.com/2na2ryo.jpg" class="image img-responsive">
                             </a>
                         </div>
                         <p class="portfolio-website">www.primovisto.com</p>
@@ -325,7 +327,7 @@
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 no-padding-2">
                         <div class="portfolio-image">
-                            <a href="#"><img src="http://i67.tinypic.com/104raqv.jpg" class="image">
+                            <a href="#"><img src="http://i67.tinypic.com/104raqv.jpg" class="image img-responsive">
                             </a>
                         </div>
                         <p class="portfolio-website">www.childofhaiti.ie</p>
