homepage responsiveness changes

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                 <div class="col-lg-12 col-md-12 col-sm-12">
                     <h2>Our Skills</h2>
                     <hr style="width:10%; border-top:5px solid #32c4e9;">
-                    <h3>Over the years we have gained vast knowledge in the following frontend technologies:</h3>
+                    <h3>We love to learn new developer frameworks and languages. Here are just some of the technologies that we specialise in.</h3>
                 </div>
             </div>
         </div>
@@ -440,7 +440,7 @@
     <footer class="footer">
         <div class="footer-left col-md-4 col-sm-6">
             <p class="about">
-                <span> About Velabri.</span> Velabri is a well established web design agency, offering the full range of web development services. Velabri was set up in Duagh, County Kerry in 2011. We have a passion for the web and in particular for building beautiful and profitable websites!
+                <span> About Velabri.</span> Velabri is a well established web design agency, offering the full range of web development services. Velabri was set up in Duagh, County Kerry in 2011. At Velabri we have a passion for the web and in particular for building beautiful and profitable websites!
             </p>
             <div class="icons">
                 <a href="#"><i class="fa fa-facebook"></i></a>
