--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
 
     <!-- Footer Section -->
     <footer class="footer">
-        <div class="footer-left col-md-4 col-sm-6">
+        <div class="footer-left col-md-4 col-sm-12 col-xs-12">
             <p class="about">
                 <span> About Velabri.</span> Velabri is a well established web design agency, offering the full range of web development services. Velabri was set up in Duagh, County Kerry in 2011. At Velabri we have a passion for the web and in particular for building beautiful and profitable websites!
             </p>
@@ -450,7 +450,7 @@
                 <a href="#"><i class="fa fa-github"></i></a>
             </div>
         </div>
-        <div class="footer-center col-md-4 col-sm-6">
+        <div class="footer-center col-md-4 col-sm-12 col-xs-12">
             <p class="center-header">Contact Velabri.</p>
             <div>
                 <i class="fa fa-map-marker"></i>
@@ -465,7 +465,7 @@
                 <p class="footer-paragraph"><a href="#"> info@velabri.co</a></p>
             </div>
         </div>
-        <div class="footer-right col-md-4 col-sm-6">
+        <div class="footer-right col-md-4 col-sm-12 col-xs-12">
             <p class="right-header">Useful Links.</p>
             <p class="menu">
                 <a href="#"> Home</a> |
